updated images and links

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="header-content2--style2">
             <div class="header-content2__logo">
                 <a class="header-content2__logo__sitename" href="index.html">
-                    <img src="assets/images/logo.jpeg" alt="logo" height="100px">
+                    <img src="assets/images/logo.png" alt="logo" height="100px">
                 </a>
             </div>
 
@@ -62,7 +62,7 @@
 <section>
     <div class="slider-banner-3">
         <div class="slider-banner-3__item">
-            <img src="assets/images/uploads/pagebanner/munnar.jpg" alt="slider3">
+            <img class="img-overlay" src="assets/images/uploads/pagebanner/munnar.jpg" alt="slider3">
             <div class="slider-banner-3__item__text animated bounceIn">
 
                 <div class="slider-banner-3__destination">
@@ -77,7 +77,7 @@
 </section>
 
 
-<section class="filterable-tour">
+<section class="filterable-tour" id="cars">
     <div class="container">
         <div class="filterable-tour__tittle">
 
@@ -107,14 +107,13 @@
                         </h3>
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
-                                <div class="trending-tour-item__group-infor__lasting"><img
-                                        src="assets/images/tours/lasting.png" alt="lasting">80 Kms Included
-                                </div>
-                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹26</div>
+                                <div class="trending-tour-item__group-infor__lasting">80 Kms Included</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹20</div>
+                                <div class="trending-tour-item__group-infor__lasting">Bata : ₹500</div>
                             </div>
 
-                            <p class="trending-tour-item__group-infor__sale-price">₹2600</p>
-                            <span class="trending-tour-item__group-infor__price">₹2500</span>
+                            <p class="trending-tour-item__group-infor__sale-price">₹1500</p>
+                            <span class="trending-tour-item__group-infor__price">₹1200</span>
 
                         </div>
                     </div>
@@ -145,7 +144,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-xl-3 col-sm-6 col-12 sedan">
                 <a href="#" class="trending-tour-item ">
-                    <img class="trending-tour-item__thumnail" src="assets/images/uploads/cars/etios.png"
+                    <img class="trending-tour-item__thumnail" src="assets/images/uploads/cars/etios.jpg"
                          alt="tour1">
                     <div class="trending-tour-item__info">
                         <h3 class="trending-tour-item__name">
@@ -153,12 +152,13 @@
                         </h3>
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
-                                <span class="trending-tour-item__group-infor__rating"></span>
-                                <div class="trending-tour-item__group-infor__lasting"><img
-                                        src="assets/images/tours/lasting.png" alt="lasting"> 3 Days / 2 Nights
-                                </div>
+                                <div class="trending-tour-item__group-infor__lasting">80 Kms Included</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹20</div>
+                                <div class="trending-tour-item__group-infor__lasting">Bata : ₹500</div>
                             </div>
-                            <span class="trending-tour-item__group-infor__price">₹456</span>
+
+                            <p class="trending-tour-item__group-infor__sale-price">₹1500</p>
+                            <span class="trending-tour-item__group-infor__price">₹1200</span>
 
                         </div>
                     </div>
@@ -175,14 +175,13 @@
                         </h3>
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
-                                <span class="trending-tour-item__group-infor__rating"></span>
-                                <div class="trending-tour-item__group-infor__lasting"><img
-                                        src="assets/images/tours/lasting.png" alt="lasting"> 2 Days / 1 Nights
-                                </div>
+                                <div class="trending-tour-item__group-infor__lasting">80 Kms Included</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹20</div>
+                                <div class="trending-tour-item__group-infor__lasting">Bata : ₹500</div>
                             </div>
 
-                            <p class="trending-tour-item__group-infor__sale-price">₹2200</p>
-                            <span class="trending-tour-item__group-infor__price">₹2000</span>
+                            <p class="trending-tour-item__group-infor__sale-price">₹1500</p>
+                            <span class="trending-tour-item__group-infor__price">₹1200</span>
 
                         </div>
                     </div>
@@ -198,13 +197,13 @@
                         </h3>
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
-                                <span class="trending-tour-item__group-infor__rating"></span>
-                                <div class="trending-tour-item__group-infor__lasting"><img
-                                        src="assets/images/tours/lasting.png" alt="lasting"> 6 Days / 6 Nights
-                                </div>
+                                <div class="trending-tour-item__group-infor__lasting">80 Kms Included</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹20</div>
+                                <div class="trending-tour-item__group-infor__lasting">Bata : ₹500</div>
                             </div>
 
-                            <span class="trending-tour-item__group-infor__price">₹703</span>
+                            <p class="trending-tour-item__group-infor__sale-price">₹1500</p>
+                            <span class="trending-tour-item__group-infor__price">₹1200</span>
 
                         </div>
                     </div>
@@ -349,7 +348,7 @@
                 <div class="section-tittle__line-under"></div>
                 <p>Popular <span>Tourist Places</span></p>
             </div>
-            <p class="destination-4-2__sub-tittle">Kerala otherwise known as god's own country due to it's amazing places of attractions
+            <p class="destination-4-2__sub-tittle" style="width:100%">Kerala otherwise known as god's own country due to it's amazing places of attractions
                 like
                 natural beauty, backwaters, beaches, temples, wildlife, scenic landscapes, climate etc. </br>
                 "Once in a life, you should pack your bag for a rounnd trip to Kerala" In an email or call, our taxis will be ready to
@@ -508,12 +507,13 @@
 <footer>
     <a class="float-call" href="tel:+918301088305">
         <i class="fas fa fa-whatsapp whatsapp"></i>
+<!--        https://codepen.io/demoonkevin/pen/MvPEpV -->
     </a>
 
     <div class="container">
         <div class="footer-menu">
             <div class="footer-menu__item">
-                <a href="#">Our Fleet</a>
+                <a href="#cars">Our Cars</a>
                 <a href="#">Types of Tours</a>
                 <a href="#">Contact</a>
             </div>
