--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                                 <div class="trending-tour-item__group-infor__lasting">Bata : ₹500</div>
                             </div>
 
-                            <p class="trending-tour-item__group-infor__sale-price">₹1500</p>
-                            <span class="trending-tour-item__group-infor__price">₹1200</span>
+                            <p class="trending-tour-item__group-infor__sale-price">₹2500</p>
+                            <span class="trending-tour-item__group-infor__price">₹2000</span>
 
                         </div>
                     </div>
@@ -131,12 +131,12 @@
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
                                 <div class="trending-tour-item__group-infor__lasting">80 Kms Included</div>
-                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹20</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹14</div>
                                 <div class="trending-tour-item__group-infor__lasting">Bata : ₹500</div>
                             </div>
 
-                            <p class="trending-tour-item__group-infor__sale-price">₹1500</p>
-                            <span class="trending-tour-item__group-infor__price">₹1200</span>
+                            <p class="trending-tour-item__group-infor__sale-price">₹1200</p>
+                            <span class="trending-tour-item__group-infor__price">₹900</span>
 
                         </div>
                     </div>
@@ -153,12 +153,12 @@
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
                                 <div class="trending-tour-item__group-infor__lasting">80 Kms Included</div>
-                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹20</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹14</div>
                                 <div class="trending-tour-item__group-infor__lasting">Bata : ₹500</div>
                             </div>
 
-                            <p class="trending-tour-item__group-infor__sale-price">₹1500</p>
-                            <span class="trending-tour-item__group-infor__price">₹1200</span>
+                            <p class="trending-tour-item__group-infor__sale-price">₹1200</p>
+                            <span class="trending-tour-item__group-infor__price">₹900</span>
 
                         </div>
                     </div>
@@ -176,12 +176,12 @@
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
                                 <div class="trending-tour-item__group-infor__lasting">80 Kms Included</div>
-                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹20</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹18</div>
                                 <div class="trending-tour-item__group-infor__lasting">Bata : ₹500</div>
                             </div>
 
-                            <p class="trending-tour-item__group-infor__sale-price">₹1500</p>
-                            <span class="trending-tour-item__group-infor__price">₹1200</span>
+                            <p class="trending-tour-item__group-infor__sale-price">₹2200</p>
+                            <span class="trending-tour-item__group-infor__price">₹1800</span>
 
                         </div>
                     </div>
@@ -197,13 +197,13 @@
                         </h3>
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
-                                <div class="trending-tour-item__group-infor__lasting">80 Kms Included</div>
-                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹20</div>
+                                <div class="trending-tour-item__group-infor__lasting">Based on seats</div>
+                                <div class="trending-tour-item__group-infor__lasting">Per Km : - </div>
                                 <div class="trending-tour-item__group-infor__lasting">Bata : ₹500</div>
                             </div>
 
-                            <p class="trending-tour-item__group-infor__sale-price">₹1500</p>
-                            <span class="trending-tour-item__group-infor__price">₹1200</span>
+                            <p class="trending-tour-item__group-infor__sale-price"></p>
+                            <span class="trending-tour-item__group-infor__price">based on seats</span>
 
                         </div>
                     </div>
