--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </section>
 
 
-<section class="filterable-tour" id="cars">
+<section id="cars" class="filterable-tour">
     <div class="container">
         <div class="filterable-tour__tittle">
 
@@ -244,7 +244,7 @@
 </section>
 
 
-<section class="tour-infomation-2">
+<section id="about" class="tour-infomation-2">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 ">
@@ -288,7 +288,7 @@
     </div>
 </section>
 
-<section class="type-of-tour-area">
+<section id="typeoftour" class="type-of-tour-area">
 
     <div class="container">
 
@@ -337,7 +337,7 @@
 
 <!-- Choose tuor destination index 4 -->
 
-<section>
+<section id="places">
     <div class="container">
         <div class="destination-4-2__tittle">
             <!-- section tittle -->
@@ -490,7 +490,7 @@
 
 </section>
 
-<section>
+<section id="contactus">
     <div class="qa-travel">
         <div class="container qa-travel__center">
             <div class="col-lg-8 qa-travel__question">
@@ -514,12 +514,16 @@
         <div class="footer-menu">
             <div class="footer-menu__item">
                 <a href="#cars">Our Cars</a>
-                <a href="#">Types of Tours</a>
-                <a href="#">Contact</a>
+                <a href="#places">Popular places</a>
             </div>
+
+            <a href="#" class="footer-menu__item">
+                <img class="footer-menu__logo" src="assets/images/logo.jpg" alt="footerlogo" height="60px">
+            </a>
+
             <div class="footer-menu__item">
-                <a href="#">about</a>
-                <a href="#">testimonials</a>
+                <a href="#about">About Us</a>
+                <a href="#travel-review">testimonials</a>
             </div>
         </div>
     </div>
