--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a href="tel:+918301088305" class="header-content2__call">
                 <img src="assets/images/call.png" alt="call">
                 <div class="header-content2__call__phone-number">
-                    <p>Call Us Today!</p>
+                    <p>Call Us!</p>
                     <span>+91-8301088305</span>
                 </div>
             </a>
@@ -198,7 +198,7 @@
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
                                 <div class="trending-tour-item__group-infor__lasting">Based on seats</div>
-                                <div class="trending-tour-item__group-infor__lasting">Per Km : - </div>
+                                <div class="trending-tour-item__group-infor__lasting">Per Km : -</div>
                                 <div class="trending-tour-item__group-infor__lasting">Bata : ₹500</div>
                             </div>
 
@@ -348,7 +348,8 @@
                 <div class="section-tittle__line-under"></div>
                 <p>Popular <span>Tourist Places</span></p>
             </div>
-            <p class="destination-4-2__sub-tittle" style="width:100%">Kerala otherwise known as god's own country due to it's amazing places of attractions
+            <p class="destination-4-2__sub-tittle" style="width:100%">Kerala otherwise known as god's own country due to it's amazing places
+                of attractions
                 like
                 natural beauty, backwaters, beaches, temples, wildlife, scenic landscapes, climate etc. </br>
                 "Once in a life, you should pack your bag for a rounnd trip to Kerala" In an email or call, our taxis will be ready to
@@ -497,19 +498,24 @@
 
                 <h6><a class="qa-travel__question__text" href="#"> Have Some Question About</a><span>
                             kerala Tours & Cabs </span>?</h6>
-                <a class="qa-travel__question__btn" href="https://api.whatsapp.com/send?phone=918301088305&text=Hi"><i class="fa fa-whatsapp"></i>&nbsp;&nbsp; let’s chat</a>
+                <a class="qa-travel__question__btn" href="https://api.whatsapp.com/send?phone=918301088305&text=Hi"><i
+                        class="fa fa-whatsapp"></i>&nbsp;&nbsp; let’s chat</a>
                 <a class="qa-travel__question__btn" href="tel:+918301088305"><i class="fa fa-phone"></i>&nbsp;&nbsp; Call</a>
-
             </div>
         </div>
     </div>
 </section>
-<footer>
+<footer  id="footer-1">
     <a class="float-call" href="tel:+918301088305">
-        <i class="fas fa fa-whatsapp whatsapp"></i>
-<!--        https://codepen.io/demoonkevin/pen/MvPEpV -->
+        <i class="fas fa fa-phone whatsapp"></i>
+        <!--        https://codepen.io/demoonkevin/pen/MvPEpV -->
     </a>
-
+    <!--<div>
+        Kerala tours and cabs
+        Piravom, Ernakulam
+        kerala, pin- 686664
+        Land line : 0485 2243505
+    </div>
     <div class="container">
         <div class="footer-menu">
             <div class="footer-menu__item">
@@ -526,6 +532,71 @@
                 <a href="#travel-review">testimonials</a>
             </div>
         </div>
+    </div>-->
+    <div class="container">
+
+        <div class="row">
+            <div class="col-lg-6 col-md-5">
+                <div class="row">
+                    <div class="col-lg-8">
+                        <div class="footer-widget-1 footer-widget-1--margin ">
+                            <a href="index.html"><img src="assets/images/logo.png" height="100px" alt="footerlogo"></a>
+                            <div class="footer-widget-1__text">
+                                <p>
+                                    Kerala Tours and Cabs is one of the best and top leading taxi providers in the state of kerala. We provide all sorts of taxi for your travel needs in kerala.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div id="remove-padding" class="col-lg-6 col-md-7">
+                <div class="footer-widget-1">
+                    <div class="footer-widget-1__lists">
+                        <div class="footer-widget-1__list">
+                            <div class="footer-widget-1__tittle">
+                                <h5>Address</h5>
+                                <div class="footer-widget-1__tittle__line-under"></div>
+                            </div>
+                            <ul>
+                                <li><span>Kerala tours and cabs</span></li>
+                                <li><span>Piravom, Ernakulam</span></li>
+                                <li><span>kerala, pin- 686664</span></li>
+                                <li><span> Land line : 0485 2243505</span></li>
+                            </ul>
+                        </div>
+
+                        <div class="footer-widget-1__list">
+                            <div class="footer-widget-1__tittle">
+                                <h5>quick links</h5>
+                                <div class="footer-widget-1__tittle__line-under"></div>
+                            </div>
+                            <ul>
+                                <li><a href="#cars">Our Cars</a></li>
+                                <li><a href="#places">Destinations</a></li>
+                                <li><a href="#aboutus">About Us</a></li>
+                                <li><a href="#reviews">Reviews</a></li>
+                            </ul>
+                        </div>
+
+                        <!--<div class="footer-widget-1__list">
+                            <div class="footer-widget-1__tittle">
+                                <h5>resources</h5>
+                                <div class="footer-widget-1__tittle__line-under"></div>
+                            </div>
+                            <ul>
+                                <li><a href="index-2.html#">Terms of Use</a></li>
+                                <li><a href="index-2.html#">Privacy Policy</a></li>
+                                <li><a href="index-2.html#">Security</a></li>
+                                <li><a href="index-2.html#">Information</a></li>
+                            </ul>
+                        </div>-->
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
     <div class="copyright-style3">
         <div class="container">
