--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     </div>
                     <!--end  gallery-syncing-item -->
                     <div class="tour-infomation__content__descript">
-                        <p>Kerala Tours and Cabs is one of the best and top leading taxi providers in the state of kerala. We provides all
+                        <p>Kerala Tours and Cabs is one of the best and top leading taxi providers in the state of kerala. We provide all
                             sorts of taxi for all who wanted a help with their travel needs when you are coming to kerala. We have an expert
                             team of professional taxi drivers at your service.
                         <p>”Kerala Tours and Cabs” is one of the best and top leading taxi providers in the state of kerala. We arrange all
@@ -267,7 +267,7 @@
                             drivers at your service. Taxis are well maintained with necessary safety measures kept for your convenience.
                             Frequent maintenance are done for the comfort of passengers. All amenities related to the taxis are also availed
                             while on move.
-                            <br>We offers a great cab service on demand. KTAC suppy taxi service to Munnar, Thekkadi, Parambikkulam,
+                            <br>We offers a great cab service on demand. KTAC supply taxi service to Munnar, Thekkadi, Parambikkulam,
                             Alappuzha, Wayanad, Cochin/Kochi, Kumarakom, Kollam, Vagamon, Kozhikkode, Astamudi, Bekal, Guruvayur,
                             Sabarimala, Idukki, Kannur, Kasargod Backwaters, Kumarakom Backwaters, Kavvayi Backwaters, Kizhunna Beach,
                             Kuttanand, Malampuzha, Marari, Munroe Island, Malappuram, Nelliampathy, Palakkad, Ponmudi, Poovar,
@@ -346,14 +346,14 @@
             <div class="section-tittle">
                 <h2>choose & go</h2>
                 <div class="section-tittle__line-under"></div>
-                <p>Popular <span>Tourist Places</span></p>
+                <p>Popular <span>Destinations</span></p>
             </div>
-            <p class="destination-4-2__sub-tittle" style="width:100%">Kerala otherwise known as god's own country due to it's amazing places
+            <p class="destination-4-2__sub-tittle" style="width:100%">Kerala otherwise known as god's own country due to its amazing places
                 of attractions
                 like
                 natural beauty, backwaters, beaches, temples, wildlife, scenic landscapes, climate etc. </br>
-                "Once in a life, you should pack your bag for a rounnd trip to Kerala" In an email or call, our taxis will be ready to
-                recieve you. </p>
+                "Once in a life, you should pack your bag for a round trip to Kerala" In an email or call, our taxis will be ready to
+                receive you. </p>
         </div>
 
 
@@ -366,8 +366,7 @@
                     <div class="destination-4-2__content__text"> "Abode of lord Krishna Unni kannan(kannaiyyah), this place which called as
                         bhu loka vaikundam. Name literally means, Guru Pavana Puram, Situated in southern part of Thrissur, Kerala"
                     </div>
-                    <a href="#"><img src="assets/images/destination/rightArrow.png"
-                                     alt="rightarrow"></a>
+
                 </div>
             </div>
 
@@ -380,8 +379,7 @@
                         varada(HariHara Putra) as dharma sastha,
                         a place for all devotees irrespective of religion, caste and creed.
                     </div>
-                    <a href="#"><img src="assets/images/destination/rightArrow.png"
-                                     alt="rightarrow"></a>
+
                 </div>
             </div>
 
@@ -395,8 +393,7 @@
                         contains large number of British model cottages due to colonial era influence.
 
                     </div>
-                    <a href="#"><img src="assets/images/destination/rightArrow.png"
-                                     alt="rightarrow"></a>
+
                 </div>
             </div>
 
@@ -405,12 +402,11 @@
                     <div class="destination-4-2__content__img"><img src="assets/images/uploads/destination/usa.png"
                                                                     alt="usa"></div>
                     <p>Alappuzha Kerala</p>
-                    <div class="destination-4-2__content__text">Serene, moisty and windy climate, in fact fabulous condition for the famous
-                        Alappuzha house boat experience.
+                    <div class="destination-4-2__content__text">Serene, moist and windy climate, in fact fabulous condition for the famous
+                        Alappuzha houseboat experience.
                         Mouth-watering fresh water fish dishes with Kerala spices is a good combination.
                     </div>
-                    <a href="#"><img src="assets/images/destination/rightArrow.png"
-                                     alt="rightarrow"></a>
+
                 </div>
             </div>
 
@@ -424,8 +420,7 @@
                         and fauna visible. There are wild elephants, deer, bison. Trekking, boating and jeep safari is possible for
                         tourists.
                     </div>
-                    <a href="#"><img src="assets/images/destination/rightArrow.png"
-                                     alt="rightarrow"></a>
+
                 </div>
             </div>
         </div>
@@ -463,7 +458,7 @@
 
             <a href="#" class="travel-review">
                 <span class="travel-review__name">Mohan Kumar</span>
-                <span class="travel-review__career">- Photoghrapher -</span>
+                <span class="travel-review__career">- Photographer -</span>
                 <span class="travel-review__rating--4-star"></span>
                 <p class="travel-review__content"> "maja aya, so cooperative team, helped us in planning our program with time bound
                     schedules, three days was simply amazing"</p>
@@ -474,7 +469,7 @@
                 <span class="travel-review__career">- Wild Life Observator -</span>
                 <span class="travel-review__rating"></span>
                 <p class="travel-review__content"> "With the support of KTAC I have able to complete all my project time bound. Their
-                    experiance with authorities helped us to make things much simpler, I recommend them"</p>
+                    experience with authorities helped us to make things much simpler, I recommend them"</p>
             </a>
 
 
@@ -505,7 +500,7 @@
         </div>
     </div>
 </section>
-<footer  id="footer-1">
+<footer id="footer-1">
     <a class="float-call" href="tel:+918301088305">
         <i class="fas fa fa-phone whatsapp"></i>
         <!--        https://codepen.io/demoonkevin/pen/MvPEpV -->
@@ -542,67 +537,70 @@
                         <div class="footer-widget-1 footer-widget-1--margin ">
                             <a href="index.html"><img src="assets/images/logo.png" height="100px" alt="footerlogo"></a>
                             <div class="footer-widget-1__text">
-                                <p>
-                                    Kerala Tours and Cabs is one of the best and top leading taxi providers in the state of kerala. We provide all sorts of taxi for your travel needs in kerala.
-                                </p>
+                                <div class="footer-widget-1__text">
+                                    <p>
+                                        Kerala Tours and Cabs is one of the best and top leading taxi providers in the state of kerala. We
+                                        provide all sorts of taxi for your travel needs in kerala.
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
-
-            </div>
-            <div id="remove-padding" class="col-lg-6 col-md-7">
-                <div class="footer-widget-1">
-                    <div class="footer-widget-1__lists">
-                        <div class="footer-widget-1__list">
-                            <div class="footer-widget-1__tittle">
-                                <h5>Address</h5>
-                                <div class="footer-widget-1__tittle__line-under"></div>
+                <div id="remove-padding" class="col-lg-6 col-md-7">
+                    <div class="footer-widget-1">
+                        <div class="footer-widget-1__lists">
+                            <div class="footer-widget-1__list">
+                                <div class="footer-widget-1__tittle">
+                                    <h5>Address</h5>
+                                    <div class="footer-widget-1__tittle__line-under"></div>
+                                </div>
+                                <ul>
+                                    <li><span>Kerala tours and cabs</span></li>
+                                    <li><span>Piravom, Ernakulam</span></li>
+                                    <li><span>kerala, pin- 686664</span></li>
+                                    <li><span> Land line : 0485 2243505</span></li>
+                                </ul>
                             </div>
-                            <ul>
-                                <li><span>Kerala tours and cabs</span></li>
-                                <li><span>Piravom, Ernakulam</span></li>
-                                <li><span>kerala, pin- 686664</span></li>
-                                <li><span> Land line : 0485 2243505</span></li>
-                            </ul>
+
+                            <div class="footer-widget-1__list">
+                                <div class="footer-widget-1__tittle">
+                                    <h5>quick links</h5>
+                                    <div class="footer-widget-1__tittle__line-under"></div>
+                                </div>
+                                <ul>
+                                    <li><a href="#cars">Our Cars</a></li>
+                                    <li><a href="#places">Destinations</a></li>
+                                    <li><a href="#aboutus">About Us</a></li>
+                                    <li><a href="#reviews">Reviews</a></li>
+                                </ul>
+                            </div>
+
+                            <!--<div class="footer-widget-1__list">
+                                <div class="footer-widget-1__tittle">
+                                    <h5>resources</h5>
+                                    <div class="footer-widget-1__tittle__line-under"></div>
+                                </div>
+                                <ul>
+                                    <li><a href="index-2.html#">Terms of Use</a></li>
+                                    <li><a href="index-2.html#">Privacy Policy</a></li>
+                                    <li><a href="index-2.html#">Security</a></li>
+                                    <li><a href="index-2.html#">Information</a></li>
+                                </ul>
+                            </div>-->
                         </div>
-
-                        <div class="footer-widget-1__list">
-                            <div class="footer-widget-1__tittle">
-                                <h5>quick links</h5>
-                                <div class="footer-widget-1__tittle__line-under"></div>
-                            </div>
-                            <ul>
-                                <li><a href="#cars">Our Cars</a></li>
-                                <li><a href="#places">Destinations</a></li>
-                                <li><a href="#aboutus">About Us</a></li>
-                                <li><a href="#reviews">Reviews</a></li>
-                            </ul>
-                        </div>
-
-                        <!--<div class="footer-widget-1__list">
-                            <div class="footer-widget-1__tittle">
-                                <h5>resources</h5>
-                                <div class="footer-widget-1__tittle__line-under"></div>
-                            </div>
-                            <ul>
-                                <li><a href="index-2.html#">Terms of Use</a></li>
-                                <li><a href="index-2.html#">Privacy Policy</a></li>
-                                <li><a href="index-2.html#">Security</a></li>
-                                <li><a href="index-2.html#">Information</a></li>
-                            </ul>
-                        </div>-->
                     </div>
                 </div>
             </div>
+
         </div>
-
-    </div>
-    <div class="copyright-style3">
-        <div class="container">
-            <div class="copyright__area">
-                <div class="copyright__license">
-                    Copyright <i class="far fa-copyright"></i> 2022 OnCompute. All Rights Reserved.
+        <div class="copyright-style3">
+            <div class="container">
+                <div class="copyright__area">
+                    <div class="copyright__license">
+                        Copyright <i class="far fa-copyright"></i> 2022 OnCompute. All Rights Reserved.
+                    </div>
                 </div>
             </div>
         </div>
