--- a/index.html
+++ b/index.html
@@ -62,12 +62,32 @@
 <section>
     <div class="slider-banner-3">
         <div class="slider-banner-3__item">
-            <img class="img-overlay" src="assets/images/uploads/pagebanner/munnar.jpg" alt="slider3">
+            <img class="img-overlay" src="assets/images/slider/banner3.jpg" alt="slider3">
             <div class="slider-banner-3__item__text animated bounceIn">
 
                 <div class="slider-banner-3__destination">
                     <span><i class="fas fa-map-marker-alt"></i>Kerala</span>
                     <h1>Kerala Tours and Cabs(KTAC)</h1>
+                </div>
+
+            </div>
+        </div>  <div class="slider-banner-3__item">
+            <img class="img-overlay" src="assets/images/slider/banner2.jpg" alt="slider3">
+            <div class="slider-banner-3__item__text animated bounceIn">
+
+                <div class="slider-banner-3__destination">
+                    <span><i class="fas fa-map-marker-alt"></i>Kerala</span>
+                    <h1>dfsdfsdfsdgffsdgfj</h1>
+                </div>
+
+            </div>
+        </div>  <div class="slider-banner-3__item">
+            <img class="img-overlay" src="assets/images/slider/banner1.webp" alt="slider3">
+            <div class="slider-banner-3__item__text animated bounceIn">
+
+                <div class="slider-banner-3__destination">
+                    <span><i class="fas fa-map-marker-alt"></i>Kerala</span>
+                    <h1>Keraljfgjhgjghjghjghjghj</h1>
                 </div>
 
             </div>
@@ -564,7 +584,7 @@
         <div class="container">
             <div class="copyright__area">
                 <div class="copyright__license">
-                    Copyright <i class="far fa-copyright"></i> 2022 OnCompute. All Rights Reserved.
+                    Copyright <i class="far fa-copyright"></i> 2022 OnCompute. Theme - Wunderlust. All Rights Reserved.
                 </div>
             </div>
         </div>
