--- a/index.html
+++ b/index.html
@@ -62,32 +62,32 @@
 <section>
     <div class="slider-banner-3">
         <div class="slider-banner-3__item">
-            <img class="img-overlay" src="assets/images/slider/banner3.jpg" alt="slider3">
+            <img class="img-overlay" src="assets/images/slider/banner3.jpg" style="max-width:600px;" alt="slider3">
             <div class="slider-banner-3__item__text animated bounceIn">
 
                 <div class="slider-banner-3__destination">
-                    <span><i class="fas fa-map-marker-alt"></i>Kerala</span>
-                    <h1>Kerala Tours and Cabs(KTAC)</h1>
+                    <span>Toyota</span>
+                    <h1>Innova Crysta</h1>
                 </div>
 
             </div>
         </div>  <div class="slider-banner-3__item">
-            <img class="img-overlay" src="assets/images/slider/banner2.jpg" alt="slider3">
+            <img class="img-overlay" src="assets/images/slider/banner2.jpg" style="max-width:600px;"  alt="slider3">
             <div class="slider-banner-3__item__text animated bounceIn">
 
                 <div class="slider-banner-3__destination">
-                    <span><i class="fas fa-map-marker-alt"></i>Kerala</span>
-                    <h1>dfsdfsdfsdgffsdgfj</h1>
+                    <span> Toyota</span>
+                    <h1>Innova Crysta</h1>
                 </div>
 
             </div>
         </div>  <div class="slider-banner-3__item">
-            <img class="img-overlay" src="assets/images/slider/banner1.webp" alt="slider3">
+            <img class="img-overlay" src="assets/images/slider/banner1.jpg" style="max-width:600px;"  alt="slider3">
             <div class="slider-banner-3__item__text animated bounceIn">
 
                 <div class="slider-banner-3__destination">
-                    <span><i class="fas fa-map-marker-alt"></i>Kerala</span>
-                    <h1>Keraljfgjhgjghjghjghjghj</h1>
+                    <span>Maruti Suzuki</span>
+                    <h1>Swift Dzire</h1>
                 </div>
 
             </div>
