--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="header-content2--style2">
             <div class="header-content2__logo">
                 <a class="header-content2__logo__sitename" href="index.html">
-                    <img src="assets/images/logo.png" alt="logo" height="65px">
+                    <img src="assets/images/logo.png" alt="logo" height="80px">
                 </a>
             </div>
 
@@ -71,8 +71,9 @@
                 </div>
 
             </div>
-        </div>  <div class="slider-banner-3__item">
-            <img class="img-overlay" src="assets/images/slider/banner2.jpg" style="max-width:600px;"  alt="slider3">
+        </div>
+        <div class="slider-banner-3__item">
+            <img class="img-overlay" src="assets/images/slider/banner2.jpg" style="max-width:600px;" alt="slider3">
             <div class="slider-banner-3__item__text animated bounceIn">
 
                 <div class="slider-banner-3__destination">
@@ -81,8 +82,9 @@
                 </div>
 
             </div>
-        </div>  <div class="slider-banner-3__item">
-            <img class="img-overlay" src="assets/images/slider/banner1.jpg" style="max-width:600px;"  alt="slider3">
+        </div>
+        <div class="slider-banner-3__item">
+            <img class="img-overlay" src="assets/images/slider/banner1.jpg" style="max-width:600px;" alt="slider3">
             <div class="slider-banner-3__item__text animated bounceIn">
 
                 <div class="slider-banner-3__destination">
@@ -533,7 +535,7 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <div class="footer-widget-1 footer-widget-1--margin ">
-                            <a href="index.html"><img src="assets/images/logo.png" height="60px" alt="footerlogo"></a>
+                            <a href="index.html"><img src="assets/images/logo.png" height="80px" alt="footerlogo"></a>
                             <div class="footer-widget-1__text">
                                 <div class="footer-widget-1__text">
                                     <p>
