--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     </a>
                 </span>
             <span class="header-4-upper__social">
-                    <a href="#"><img src="assets/images/header4upperIns.png" alt="header4ins"></a>
-                    <a href="#"><img src="assets/images/header4face.png" alt="face"></a>
+                    <a href="https://www.instagram.com/keralatours_and_cabs/"><img src="assets/images/header4upperIns.png" alt="header4ins"></a>
+                    <a href="https://www.facebook.com/keral.tours.9/"><img src="assets/images/header4face.png" alt="face"></a>
                 </span>
         </div>
     </div>
@@ -129,13 +129,13 @@
                         </h3>
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
-                                <div class="trending-tour-item__group-infor__lasting">80 Kms Included</div>
-                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹20</div>
-                                <div class="trending-tour-item__group-infor__lasting">Bata : ₹500</div>
+                                <div class="trending-tour-item__group-infor__lasting">6 person / 100 Kms</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹21</div>
+                                <div class="trending-tour-item__group-infor__lasting">Bata : ₹300pd</div>
                             </div>
 
                             <p class="trending-tour-item__group-infor__sale-price">₹2500</p>
-                            <span class="trending-tour-item__group-infor__price">₹2000</span>
+                            <span class="trending-tour-item__group-infor__price">₹2400</span>
 
                         </div>
                     </div>
@@ -152,13 +152,12 @@
                         </h3>
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
-                                <div class="trending-tour-item__group-infor__lasting">80 Kms Included</div>
-                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹14</div>
-                                <div class="trending-tour-item__group-infor__lasting">Bata : ₹500</div>
+                                <div class="trending-tour-item__group-infor__lasting">4 person / 100 Kms</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹15</div>
+                                <div class="trending-tour-item__group-infor__lasting">Bata : ₹300pd</div>
                             </div>
 
-                            <p class="trending-tour-item__group-infor__sale-price">₹1200</p>
-                            <span class="trending-tour-item__group-infor__price">₹900</span>
+                            <span class="trending-tour-item__group-infor__price">₹1600</span>
 
                         </div>
                     </div>
@@ -174,13 +173,12 @@
                         </h3>
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
-                                <div class="trending-tour-item__group-infor__lasting">80 Kms Included</div>
-                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹14</div>
-                                <div class="trending-tour-item__group-infor__lasting">Bata : ₹500</div>
+                                <div class="trending-tour-item__group-infor__lasting">4 person / 100 Kms</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹15</div>
+                                <div class="trending-tour-item__group-infor__lasting">Bata : ₹300pd</div>
                             </div>
 
-                            <p class="trending-tour-item__group-infor__sale-price">₹1200</p>
-                            <span class="trending-tour-item__group-infor__price">₹900</span>
+                            <span class="trending-tour-item__group-infor__price">₹1600</span>
 
                         </div>
                     </div>
@@ -197,13 +195,13 @@
                         </h3>
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
-                                <div class="trending-tour-item__group-infor__lasting">80 Kms Included</div>
-                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹18</div>
-                                <div class="trending-tour-item__group-infor__lasting">Bata : ₹500</div>
+                                <div class="trending-tour-item__group-infor__lasting">6 person / 100 Kms</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹19</div>
+                                <div class="trending-tour-item__group-infor__lasting">Bata : ₹300pd</div>
                             </div>
 
-                            <p class="trending-tour-item__group-infor__sale-price">₹2200</p>
-                            <span class="trending-tour-item__group-infor__price">₹1800</span>
+                            <p class="trending-tour-item__group-infor__sale-price">₹2100</p>
+                            <span class="trending-tour-item__group-infor__price">₹2000</span>
 
                         </div>
                     </div>
@@ -215,17 +213,16 @@
                          alt="tour1">
                     <div class="trending-tour-item__info">
                         <h3 class="trending-tour-item__name">
-                            Traveller 12 seater
+                            Traveller 11 seater
                         </h3>
                         <div class="trending-tour-item__group-infor">
                             <div class="trending-tour-item__group-infor--left">
-                                <div class="trending-tour-item__group-infor__lasting">Based on seats</div>
-                                <div class="trending-tour-item__group-infor__lasting">Per Km : -</div>
-                                <div class="trending-tour-item__group-infor__lasting">Bata : ₹500</div>
+                                <div class="trending-tour-item__group-infor__lasting">11 person / 100 Kms</div>
+                                <div class="trending-tour-item__group-infor__lasting">Additional Km : ₹22</div>
+                                <div class="trending-tour-item__group-infor__lasting">Bata : ₹300pd</div>
                             </div>
 
-                            <p class="trending-tour-item__group-infor__sale-price"></p>
-                            <span class="trending-tour-item__group-infor__price">based on seats</span>
+                            <span class="trending-tour-item__group-infor__price">₹3200</span>
 
                         </div>
                     </div>
@@ -254,6 +251,7 @@
                         <li>Kms are calculated on a point to point basis from our Garage (Airport / Ernakulam) and back to the same
                             location.
                         </li>
+                        <li>Above rates apply for package tours. For business/local transfers, 80km and 8 hours will apply.</li>
                         <li>Above taxi fare may not be valid for peak Festive season i.e. New Year, Christmas, Diwali etc</li>
                     </ul>
                 </div>
